<resources>
    <string name="app_name">Test_cofee</string>
    <string name="e_mail">e-mail</string>
    <string name="pass">пароль</string>
    <string name="pass_repeat">Повторите пароль</string>
    <string name="pass_hint">******</string>
    <string name="email_hint">example@mail.com</string>
    <string name="register">Регистрация</string>
    <string name="login">Войти</string>
    <string name="check_email_error">проверьте e-mail</string>
    <string name="check_pass_error">мин 6 символов</string>
    <string name="check_pass_repeat">пароли не совпадают</string>
    <string name="checkAll">проверьте корректность введенных данных</string>
    <string name="in_map">На карте</string>
    <string name="coffee_title">Ближайшие кофейни</string>
    <string name="map_title">Карта</string>
    <string name="coffee_menu_title">Ознакомиться с меню кофейни ? </string>
    <string name="yes">Да </string>
    <string name="dismiss">Отмена </string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="menu">Меню</string>
    <string name="go_to_pay">Перейти к оплате</string>
    <string name="pay_text">Время ожидания заказа 15 минут! Спасибо, что выбрали нас!</string>
    <string name="pay_text_empty">Список товаров пуст !</string>
    <string name="pay">Оплатить</string>
    <string name="pay_title">Ваш заказ</string>
    <string name="rub">руб</string>
<!--    <string name="dialog_location_message">Это приложение требует разрешения на доступ к местоположению для своей работы.</string>-->
<!--    <string name="dialog_location_title">Необходимо разрешение на доступ к местоположению.</string>-->
</resources>