<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="16dp"
    android:backgroundTint="@color/card_bg"
    android:elevation="12dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Cappucino" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_name"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            tools:text="300 rub" />


        <TextView
            android:id="@+id/button_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_count"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/button_plus"
            app:layout_constraintStart_toStartOf="@+id/button_plus"
            app:layout_constraintTop_toTopOf="@id/button_plus" />


        <TextView
            android:id="@+id/button_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/minus"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/text_count"
            app:layout_constraintStart_toStartOf="@+id/text_count"
            app:layout_constraintTop_toTopOf="@id/text_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>