<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="13dp"
    android:layout_marginEnd="13dp"
    android:elevation="12dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/baseline_arrow_back_ios_new_24"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/item_image"
            tools:layout_editor_absoluteX="10dp"
            tools:text="Coffee" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_black"
            tools:text="200"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_name"
            app:layout_constraintTop_toBottomOf="@id/item_name" />

        <TextView
            android:id="@+id/button_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/plus"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/text_count"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/button_plus"
            app:layout_constraintStart_toStartOf="@+id/button_plus"
            app:layout_constraintTop_toTopOf="@id/button_plus" />


        <TextView
            android:id="@+id/button_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/minus"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/text_count"
            app:layout_constraintStart_toStartOf="@+id/text_count"
            app:layout_constraintTop_toTopOf="@id/text_count" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>